Revised directory structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-brightness
-climatology
-formod
-hydrostatic
-interpolate
-jsec2time
-jurassic.o
-kernel
-limb
-nadir
-planck
-raytrace
-retrieval
-time2jsec
+doc/latex
+src/brightness
+src/climatology
+src/formod
+src/hydrostatic
+src/interpolate
+src/jsec2time
+src/jurassic.o
+src/kernel
+src/limb
+src/nadir
+src/planck
+src/raytrace
+src/retrieval
+src/time2jsec
+tab/
