Update to gsl-2.6.

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,10 +6,10 @@
 EXC = brightness climatology formod hydrostatic interpolate jsec2time kernel limb nadir planck raytrace retrieval time2jsec
 
 # Library directories...
-LIBDIR = -L ../lib/build/lib
+LIBDIR = -L ../libs/build/lib
 
 # Include directories...
-INCDIR = -I ../lib/build/include
+INCDIR = -I ../libs/build/include
 
 # -----------------------------------------------------------------------------
 # Set flags for GNU compiler...
@@ -44,7 +44,7 @@ dist:
 	zip jurassic_`date +"%y%m%d%H%M"`.zip Doxyfile Makefile *.c *.h
 
 doc:
-	mkdir -p ../doc && doxygen && cd ../doc/latex && make && mv refman.pdf ..
+	mkdir -p ../docs && doxygen && cd ../docs/latex && make && mv refman.pdf ..
 
 indent:
 	indent -br -brf -brs -bfda -ce -cdw -lp -npcs -npsl *.c *.h
