--- a/.github/workflows/testcase.yml
+++ b/.github/workflows/testcase.yml
@@ -12,11 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install
-      run: sudo apt-get update ; sudo apt-get install wget gnuplot
-    - name: libs
-      run: cd libs ; ./build.sh
+      run: sudo apt-get update ; sudo apt-get install wget gnuplot libgsl-dev
     - name: make
-      run: cd src ; make
+      run: cd src ; make STATIC=0
     - name: example limb
       run: cd example/limb ; ./run.sh
     - name: example nadir
