--- a/src/Makefile
+++ b/src/Makefile
@@ -8,11 +8,11 @@ EXC = brightness climatology filter formod hydrostatic interpolate invert jsec2t
 # Installation directory...
 DESTDIR ?= ../bin
 
-# Library directories...
-LIBDIR ?= -L ../libs/build/lib
-
 # Include directories...
-INCDIR ?= -I ../libs/build/include
+INCDIR += -I ../libs/build/include
+
+# Library directories...
+LIBDIR += -L ../libs/build/lib
 
 # Static compilation...
 STATIC ?= 1
