Added output of git version.

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,11 +30,14 @@ PROF ?= 0
 # Set flags for GNU compiler...
 # -----------------------------------------------------------------------------
 
+# Get git version...
+VERSION ?= $(shell git describe --abbrev=4 --dirty --always --tags)
+
 # Compiler...
 CC ?= gcc
 
 # CFLAGS...
-CFLAGS ?= $(INCDIR) $(DEFINES) -DHAVE_INLINE -DGSL_DISABLE_DEPRACTED -pedantic -Werror -Wall -W -Wmissing-prototypes -Wstrict-prototypes -Wconversion -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wnested-externs -Wno-long-long -Wmissing-declarations -Wredundant-decls -Winline -fno-common -fshort-enums -fopenmp $(OPT) -g
+CFLAGS ?= $(INCDIR) $(DEFINES) -DVERSION=\"$(VERSION)\" $(OPT) -DHAVE_INLINE -DGSL_DISABLE_DEPRACTED -pedantic -Werror -Wall -W -Wmissing-prototypes -Wstrict-prototypes -Wconversion -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wnested-externs -Wno-long-long -Wmissing-declarations -Wredundant-decls -Winline -fno-common -fshort-enums -fopenmp $(OPT) -g
 
 # LDFLAGS...
 LDFLAGS ?= $(LIBDIR) -lgsl -lgslcblas -lm
