Added cppcheck. Minor fixes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -77,6 +77,9 @@ check: all
 clean:
 	rm -f $(EXC) *.o *~
 
+cppcheck: all
+	cd ../ && cppcheck --enable=all ./src
+
 dist:
 	zip jurassic_`date +"%y%m%d%H%M"`.zip Doxyfile Makefile *.c *.h
 
