--- a/src/Makefile
+++ b/src/Makefile
@@ -78,7 +78,7 @@ clean:
 	rm -f $(EXC) *.o *~
 
 cppcheck:
-	cd ../ && cppcheck --enable=all ./src
+	cppcheck --enable=all ./
 
 dist:
 	zip jurassic_`date +"%y%m%d%H%M"`.zip Doxyfile Makefile *.c *.h
