--- a/.github/workflows/testcase.yml
+++ b/.github/workflows/testcase.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install
-      run: sudo apt-get update ; sudo apt-get install wget gnuplot libgsl-dev
+      run: sudo apt-get update ; sudo apt-get install gnuplot libgsl-dev
     - name: make
       run: cd src ; make STATIC=0
     - name: example limb
