--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: MPTRAC
-site_url: https://slcs-jsc.github.io/mptrac/
-repo_url: https://github.com/slcs-jsc/mptrac
+site_name: JURASSIC
+site_url: https://slcs-jsc.github.io/jurassic/
+repo_url: https://github.com/slcs-jsc/jurassic
 docs_dir: manual
 theme: material
 
