--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -17,6 +17,8 @@ jobs:
     - name: coverage
       run: cd ./src ; STATIC=0 COV=1 make coverage
     - name: upload
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         directory: ./src/
