--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   deploying_mkdoc:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: mkdocs
         uses: actions/checkout@v4
@@ -19,7 +19,7 @@ jobs:
              cd docs ; mkdocs gh-deploy --force --clean --verbose
         
   deploying_doxygen:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: deploying_mkdoc
     steps:
       - name: doxygen
